--- a/Discover.html
+++ b/Discover.html
@@ -54,7 +54,7 @@
     <section class="Latest-news">
 
 
-<!-- <div class="d-flex justify-content-between align-items-center gap-2 mb-3"> -->
+<div class="d-flex justify-content-between align-items-center gap-2 mb-3">
   <h1 class="fade-in mb-0 flex-grow-1 col-md-3">Latest News</h1>
 
   <!-- Filter by Author -->
@@ -72,7 +72,7 @@
       <option value="author">Sort by Author</option>
       <option value="category">Sort by Category</option>
     </select>
-
+</div>
   
 </div>
 
@@ -94,8 +94,7 @@
   </div>
 <div id="noArticlesMsg" class="nonedisplay">No articles found.</div>
 
-  
-  <!-- </div> -->
+       </div>
     </section>
 </main>
 
