--- a/About.html
+++ b/About.html
@@ -55,7 +55,7 @@
   </div>
   <div class="overflow-hidden" style="max-height: 30vh;">
     <div class="container px-5">
-      <img src="pics/about-img.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="About Zeyad" width="700" height="500" loading="lazy">
+      <img src="pics/About-img.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="About Zeyad" width="700" height="500" loading="lazy">
     </div>
   </div>
 </div>
