--- a/ZAS-News.html
+++ b/ZAS-News.html
@@ -117,7 +117,7 @@
 
        <div class="container px-4 py-3" id="trending-cards">
   <h2 class="pb-2 border-bottom"><b><span class="topheadlines1">Top</span> <span class="topheadlines2">Headlines</span></h2>
-  <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5" id="trendingContainer">
+  <div class="row row-cols-1 row-cols-lg-3 justify-content-center align-items-stretch g-4 py-5" id="trendingContainer">
     <!-- Cards will be injected here by JS -->
   </div>
 </div>
