--- a/ZAS-News.html
+++ b/ZAS-News.html
@@ -5,6 +5,9 @@
   <head>
     <meta charset="UTF-8">
 
+    <base href="/Z-A-S/">
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Home | Z-A-S</title>
