--- a/article.html
+++ b/article.html
@@ -99,7 +99,7 @@
 <script type="text/javascript" src="scripts/articlescript.js"></script>
 <script src="scripts/darkmode.js"></script>
 <script type="text/javascript" src="scripts/script.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/marked@16.0.0/lib/marked.umd.min.js"></script>
 
 
 
